kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: java-demo-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: java-demo-app

  template:

    metadata:
      labels:
        app: java-demo-app

    spec:

      containers:

      - name: app

        image: 123456789012.dkr.ecr.eu-west-1.amazonaws.com/java-demo-app:latest

        ports:

        - containerPort: 8080
