kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: java-demo-app

spec:
  selector:
    app: java-demo-app

  ports:

  - port: 80
    targetPort: 8080

  type: ClusterIP
