kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: java-demo-app

spec:

  ingressClassName: nginx

  rules:

  - host: app.example.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: java-demo-app

            port:

              number: 80
